fix(simple): align theme blues with Notion color RGB palette

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -18,50 +18,50 @@
   --select-color-1: rgba(45, 170, 219, 0.3);
   --select-color-2: #ffffff;
 
-  --notion-red: rgb(224, 62, 62);
-  --notion-pink: rgb(173, 26, 114);
-  --notion-blue: rgb(37, 99, 235);
-  --notion-purple: rgb(105, 64, 165);
-  --notion-teal: rgb(15, 123, 108);
-  --notion-yellow: rgb(223, 171, 1);
+  --notion-red: rgb(212, 76, 71);
+  --notion-pink: rgb(193, 76, 138);
+  --notion-blue: rgb(51, 126, 169);
+  --notion-purple: rgb(144, 101, 176);
+  --notion-teal: rgb(68, 131, 97);
+  --notion-yellow: rgb(203, 145, 47);
   --notion-orange: rgb(217, 115, 13);
-  --notion-brown: rgb(100, 71, 58);
-  --notion-gray: rgb(155, 154, 151);
+  --notion-brown: rgb(159, 107, 83);
+  --notion-gray: rgb(120, 119, 116);
 
-  --notion-red_background: rgb(251, 228, 228);
-  --notion-pink_background: rgb(244, 223, 235);
-  --notion-blue_background: rgb(219, 234, 254);
-  --notion-purple_background: rgb(234, 228, 242);
-  --notion-teal_background: rgb(221, 237, 234);
+  --notion-red_background: rgb(253, 235, 236);
+  --notion-pink_background: rgb(251, 228, 243);
+  --notion-blue_background: rgb(231, 243, 248);
+  --notion-purple_background: rgb(244, 240, 247);
+  --notion-teal_background: rgb(237, 243, 236);
   --notion-yellow_background: rgb(251, 243, 219);
-  --notion-orange_background: rgb(250, 235, 221);
-  --notion-brown_background: rgb(233, 229, 227);
-  --notion-gray_background: rgb(241 241 239);
-  --notion-green_background: rgb(219, 237, 219);
-  --notion-default_background: rgba(227, 226, 224);
+  --notion-orange_background: rgb(251, 236, 221);
+  --notion-brown_background: rgb(244, 238, 238);
+  --notion-gray_background: rgb(241, 241, 239);
+  --notion-green_background: rgb(237, 243, 236);
+  --notion-default_background: rgb(227, 226, 224);
 
-  --notion-red_background_co: rgba(251, 228, 228, 0.3);
-  --notion-pink_background_co: rgba(244, 223, 235, 0.3);
-  --notion-blue_background_co: rgba(219, 234, 254, 0.3);
-  --notion-purple_background_co: rgba(234, 228, 242, 0.3);
-  --notion-teal_background_co: rgba(221, 237, 234, 0.3);
+  --notion-red_background_co: rgba(253, 235, 236, 0.3);
+  --notion-pink_background_co: rgba(251, 228, 243, 0.3);
+  --notion-blue_background_co: rgba(231, 243, 248, 0.3);
+  --notion-purple_background_co: rgba(244, 240, 247, 0.3);
+  --notion-teal_background_co: rgba(237, 243, 236, 0.3);
   --notion-yellow_background_co: rgba(251, 243, 219, 0.3);
-  --notion-orange_background_co: rgba(250, 235, 221, 0.3);
-  --notion-brown_background_co: rgba(233, 229, 227, 0.3);
+  --notion-orange_background_co: rgba(251, 236, 221, 0.3);
+  --notion-brown_background_co: rgba(244, 238, 238, 0.3);
   --notion-gray_background_co: rgba(241, 241, 239, 0.3);
-  --notion-green_background_co: rgba(219, 237, 219, 0.3);
+  --notion-green_background_co: rgba(237, 243, 236, 0.3);
   --notion-default_background_co: rgba(227, 226, 224, 0.3);
 
-  --notion-item-blue: rgba(0, 120, 223, 0.2);
+  --notion-item-blue: rgba(51, 126, 169, 0.2);
   --notion-item-orange: rgba(245, 93, 0, 0.2);
-  --notion-item-green: rgba(0, 135, 107, 0.2);
-  --notion-item-pink: rgba(221, 0, 129, 0.2);
-  --notion-item-brown: rgba(140, 46, 0, 0.2);
-  --notion-item-red: rgba(255, 0, 26, 0.2);
-  --notion-item-yellow: rgba(233, 168, 0, 0.2);
+  --notion-item-green: rgba(68, 131, 97, 0.2);
+  --notion-item-pink: rgba(193, 76, 138, 0.2);
+  --notion-item-brown: rgba(159, 107, 83, 0.2);
+  --notion-item-red: rgba(212, 76, 71, 0.2);
+  --notion-item-yellow: rgba(203, 145, 47, 0.2);
   --notion-item-default: rgba(206, 205, 202, 0.5);
-  --notion-item-purple: rgba(103, 36, 222, 0.2);
-  --notion-item-gray: rgba(155, 154, 151, 0.4);
+  --notion-item-purple: rgba(144, 101, 176, 0.2);
+  --notion-item-gray: rgba(120, 119, 116, 0.4);
 
   --notion-max-width: 720px;
   --notion-header-height: 45px;
